mdapioutput/objects/Promotion__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CORE_IsActivePromotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SellInEndDate__c</fullName>
        <label>Sell-in end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SellInStartDate__c</fullName>
        <label>Sell-in start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SellOutEndDate__c</fullName>
        <label>Sell-out end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SellOutStartDate__c</fullName>
        <label>Sell-out start date</label>
        <type>Date</type>
    </fields>
</CustomObject>